Escape option deprecation message before formatting

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -93,7 +93,7 @@
                                             <label><code>{{ option.name }}</code></label>
                                             <p>{{ option.description|e|format }}</p>
                                             {% if option.deprecated %}
-                                                <p><strong>Deprecated option: {{ option.deprecationMessage|format }}</strong></p>
+                                                <p><strong>Deprecated option: {{ option.deprecationMessage|e|format }}</strong></p>
                                             {% endif %}
                                             {% if option.allowsMultipleValues %}
                                                 <select multiple class="form-control" name="fixers[{{ fixer.name }}][{{ option.name }}][]">
