WIP issue creation

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -137,6 +137,9 @@
                 </form>
             </div>
             <div class="col-sm-6">
+                {% if issue %}
+                    <a href="https://github.com/FriendsOfPHP/PHP-CS-Fixer/issues/new?body={{ issue|url_encode }}" target="_blank">Open issue</a>
+                {% endif %}
                 {% if deprecationMessages %}
                     <div class="card bg-warning text-white mb-3">
                         <div class="card-header">Deprecations</div>
