--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,6 +1,6 @@
 @import '../node_modules/bootstrap/scss/bootstrap';
-@import '../node_modules/prismjs/themes/prism.css';
-@import '../node_modules/prismjs/plugins/show-invisibles/prism-show-invisibles.css';
+@import '../node_modules/prismjs/themes/prism';
+@import '../node_modules/prismjs/plugins/show-invisibles/prism-show-invisibles';
 
 #code {
     font-family: monospace;
