--- a/templates/index.twig
+++ b/templates/index.twig
@@ -266,7 +266,7 @@
                 <div class="card">
                     <div class="card-header">Config</div>
                     <div class="card-body">
-                        <pre><code class="language-php">{{ generatedConfig }}</code></pre>
+                        <pre><code class="language-php">{{ configFile }}</code></pre>
                     </div>
                 </div>
             </div>
