--- a/templates/index.twig
+++ b/templates/index.twig
@@ -69,6 +69,9 @@
                             </div>
                         </div>
                     </div>
+                    <div class="form-group">
+                        <input class="form-control" type="text" id="query">
+                    </div>
                     <ul class="list-group">
                         {% for fixer in availableFixers %}
                             {% set enabled = fixers[fixer.name] ?? false %}
@@ -78,7 +81,12 @@
                             {% elseif fixer.risky %}
                                 {% set itemClasses = itemClasses|merge(['list-group-item-warning']) %}
                             {% endif %}
-                            <li class="{{ itemClasses|join(' ') }}" id="{{ fixer.name }}">
+                            <li
+                                class="{{ itemClasses|join(' ') }}"
+                                id="{{ fixer.name }}"
+                                data-fixer
+                                data-name="{{ fixer.name }}"
+                            >
                                 <div class="d-flex w-100 justify-content-between">
                                     <label>
                                         <input
