--- a/templates/index.twig
+++ b/templates/index.twig
@@ -70,7 +70,13 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" id="query">
+                        <input
+                            class="form-control"
+                            type="text"
+                            id="query"
+                            placeholder="Search for fixers"
+                            autocomplete="off"
+                        >
                     </div>
                     <ul class="list-group">
                         {% for fixer in availableFixers %}
