--- a/templates/index.twig
+++ b/templates/index.twig
@@ -20,11 +20,8 @@
                     <div class="form-group">
                         <textarea class="form-control" name="code" id="code" cols="30" rows="10">{{ code }}</textarea>
                     </div>
-                    <div class="form-group">
-                        <button class="btn btn-primary">Run</button>
-                    </div>
                     <div class="row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-5">
                             <div class="form-group">
                                 <label for="indent">Indentation</label>
                                 <select class="form-control" name="indent" id="indent">
@@ -49,7 +46,7 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-5">
                             <div class="form-group">
                                 <label for="line-ending">Line Ending</label>
                                 <select class="form-control" name="line_ending" id="line-ending">
@@ -67,6 +64,9 @@
                                     </option>
                                 </select>
                             </div>
+                        </div>
+                        <div class="col-sm-2 d-flex align-items-end">
+                            <button class="btn btn-primary btn-block mb-3">Run</button>
                         </div>
                     </div>
                     <div class="form-group">
